File: Fix Download button responsiveness on mobile
- Applied display: flex to ensure proper alignment.
- Prevented the Download button from breaking to a new line on mobile.

--- a/packages/block-library/src/file/editor.scss
+++ b/packages/block-library/src/file/editor.scss
@@ -33,6 +33,8 @@
 	}
 
 	.wp-block-file__content-wrapper {
+		display: flex;
+		align-items: center;
 		flex-grow: 1;
 	}
 
